Cambio Estatus desde Folio de Huesped
- Actualizada la funcion de cambio de estatus desde folio del huesped

--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
@@ -43,15 +43,16 @@
 
   <br />
   <!-- </div>  -->
-  <div class="container">
-    <div class="col-lg-8">
+  <form [formGroup]="formGroup">
+  <div class="row container">
+    <div class="col-lg-7">
       <ng-container *ngIf="customerService.getCurrentHuespedValue.estatus=='Huesped en Casa'||customerService.getCurrentHuespedValue.estatus=='Check-Out'||customerService.getCurrentHuespedValue.estatus=='Uso Interno'||customerService.getCurrentHuespedValue.estatus=='Bloqueo / Sin Llegadas'||customerService.getCurrentHuespedValue.estatus=='Reserva Temporal'">
-        <mat-select  disabled style="width:160px; color: white; font-weight: bold; font-size: larger; " [(value)]="customerService.getCurrentHuespedValue.estatus" [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" name="filter_for" id="demo" class="btn">
+        <mat-select formControlName='estatus' disabled style="color: white; font-weight: bold; font-size: larger; " [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" name="filter_for" id="demo" class="btn">
           <mat-option #option [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)"  [value]="customerService.getCurrentHuespedValue.estatus">{{customerService.getCurrentHuespedValue.estatus}}</mat-option>
         </mat-select>
       </ng-container>
       <ng-container *ngIf="customerService.getCurrentHuespedValue.estatus=='Reserva Sin Pago'||customerService.getCurrentHuespedValue.estatus=='Deposito Realizado'||customerService.getCurrentHuespedValue.estatus=='Esperando Deposito'||customerService.getCurrentHuespedValue.estatus=='Totalmente Pagada'||customerService.getCurrentHuespedValue.estatus=='Reserva Confirmada'">
-        <mat-select style="width: 160px; color: white; font-weight: bold; font-size: larger;  " #selected [(value)]="customerService.getCurrentHuespedValue.estatus"  (selectionChange)="openDialog(huesped)" [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" name="filter_for" id="demo" class="btn" >
+        <mat-select formControlName='estatus' style=" color: white; font-weight: bold; font-size: larger;  " #selected  (selectionChange)="openDialog(huesped,selected.value)" [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" name="filter_for" id="demo" class="btn" >
           <ng-container *ngFor="let estatus of estatusArray">
             <ng-container  *ngIf="estatus.id==2||estatus.id==3||estatus.id==8||estatus.id==9||estatus.id==10">
               <mat-option #option [style.background-color]="estatus.color" [value]="estatus.estatus">{{estatus.estatus}}</mat-option>
@@ -59,21 +60,21 @@
           </ng-container>
         </mat-select>
       </ng-container>
-      <ng-container *ngIf="customerService.getCurrentHuespedValue.estatus=='No Show'||customerService.getCurrentHuespedValue.estatus=='Reserva Cancelada'">
-        <mat-select style="width:160px" [(value)]="customerService.getCurrentHuespedValue.estatus" [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" name="filter_for" id="demo" class="btn">
+      <ng-container  *ngIf="customerService.getCurrentHuespedValue.estatus=='No Show'||customerService.getCurrentHuespedValue.estatus=='Reserva Cancelada'">
+        <mat-select formControlName='estatus' [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" name="filter_for" id="demo" class="btn">
           <mat-option #option [style.background-color]="backgroundColor(customerService.getCurrentHuespedValue.estatus)" [value]="customerService.getCurrentHuespedValue.estatus">{{customerService.getCurrentHuespedValue.estatus}}</mat-option>
         </mat-select>
       </ng-container>
     </div>
-    <div class="col-lg-4">
-      <mat-select style="width: 160px; color: white; font-weight: bold; font-size: larger;  " name="estatusAma" id="amaDellaves" class="btn" >
+    <div class="col-lg-5">
+      <mat-select #selectedAma (selectionChange)='onChangeAma(selectedAma.value)' formControlName='ama' [(value)]="disponibilidadEstatus.Estatus_Ama_De_Llaves" style=" color: white; font-weight: bold; font-size: larger;" [style.background-color]="backgroundColorAmadeLlaves(disponibilidadEstatus.Estatus_Ama_De_Llaves)" name="estatusAma" id="amaDellaves" class="btn" >
         <ng-container *ngFor="let estatusAmaDeLlaves of amaDeLlavesList" >
-          <mat-option [value]="amaDeLlaves.Descripcion" [style.background-color]="backgroundColorAmadeLlaves(estatusAmaDeLlaves.Estatus)"> {{estatusAmaDeLlaves.Descripcion}}</mat-option>
+          <mat-option  [value]="estatusAmaDeLlaves.Descripcion" [style.background-color]="estatusAmaDeLlaves.Color"> {{estatusAmaDeLlaves.Descripcion}}</mat-option>
         </ng-container>
       </mat-select>
     </div>
   </div>
-  
+</form>
 <br>
 
   <!-- <div style="background-color: #00506a;" class="col-md-12 cursor-default modal-content "> -->
