--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/huesped/huesped-component/huesped-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/huesped/huesped-component/huesped-component.component.html
@@ -138,10 +138,16 @@ class="form form-label-right"
       <div class="form-group">
         <label class="form-label">Fecha de Nacimiento</label>
         <div class="input-group">
-          <input placement='bottom-left' formControlName="fechaNacimiento" class="form-control form-control-lg form-control-solid" placeholder="yyyy-mm-dd"
-              [minDate]="fromDate.c"              [startDate]="fromDate.c"
-    
-          name="dp"  ngbDatepicker [footerTemplate]="footerTemplate" #d="ngbDatepicker">
+          <input placement='bottom-left' 
+          formControlName="fechaNacimiento" 
+          class="form-control form-control-lg form-control-solid" placeholder="yyyy-mm-dd"
+          [minDate]=today              
+          [startDate]="fromDate"
+          name="dp"  ngbDatepicker 
+          [footerTemplate]="footerTemplate" 
+          #d="ngbDatepicker"
+          [value]=todayString
+          (dateSelect)="formatDate($event)">
           <div class="input-group-append">
             <button class="btn btn-outline-secondary " (click)="d.toggle()" type="button">
               <i class="fa fa-calendar icon"></i>
