--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
@@ -240,10 +240,10 @@
                     HAB
                   </th>
                   <th>
-                  $ NOCHE
+                    {{divisasService.getcurrentDivisa.Simbolo}} NOCHE
                   </th>
                   <th>
-                   $ TOTAL
+                    {{divisasService.getcurrentDivisa.Simbolo}} TOTAL
                   </th>
                   <!-- <th >
                     CAPACIDAD
@@ -272,10 +272,10 @@
               HAB
             </th>
             <th>
-            $ NOCHE
+              {{divisasService.getcurrentDivisa.Simbolo}} NOCHE
             </th>
             <th>
-             $ TOTAL
+              {{divisasService.getcurrentDivisa.Simbolo}} TOTAL
             </th>
             <!-- <th >
               CAPACIDAD
