--- a/src/app/pages/reportes/customers/components/helpers/modifica-huesped/modifica-huesped.component.html
+++ b/src/app/pages/reportes/customers/components/helpers/modifica-huesped/modifica-huesped.component.html
@@ -283,10 +283,10 @@
                   HAB
                 </th>
                 <th>
-                $ NOCHE
+                  {{divisasService.getcurrentDivisa.Simbolo}} NOCHE
                 </th>
                 <th>
-                 $ TOTAL
+                  {{divisasService.getcurrentDivisa.Simbolo}} TOTAL
                 </th>
                 <!-- <th >
                   CAPACIDAD
@@ -317,10 +317,10 @@
                         HAB
                       </th>
                       <th>
-                      $ NOCHE
+                        {{divisasService.getcurrentDivisa.Simbolo}} NOCHE
                       </th>
                       <th>
-                      $ TOTAL
+                        {{divisasService.getcurrentDivisa.Simbolo}} TOTAL
                       </th>
                       <!-- <th >
                         CAPACIDAD
